# cppjsdeferred

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  promisefactory.cpp  promisefactory.h
tests/: CMakeLists.txt  main.cpp  tst_cppjsdeferred_test.qml  tst_jspromisefactory_test.qml
